--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OriginSix</title>
+
+    <!-- ícones -->
+    <link rel="stylesheet" href="assests/fonts/style.css">
+
     <!-- Styles -->
     <link rel="stylesheet" href="style.css" />
 
@@ -19,7 +23,7 @@
   </head>
   <body>
     <header id="header">
-      <nav class="container show">
+      <nav class="container">
         <a class="logo" href="#">beauty<span>salon</span>.</a>
         <div class="menu">
           <ul class="grid">
@@ -30,8 +34,8 @@
             <li><a class="title" href="contact">Contato</a></li>
           </ul>
         </div>
-        <div class="open">...</div>
-        <div class="close">x</div>
+        <div class="icon-menu"></div>
+        <div class="icon-close"></div>
       </nav>
     </header>
 
