--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>OriginSix</title>
 
     <!-- ícones -->
-    <link rel="stylesheet" href="assests/fonts/style.css">
+    <link rel="stylesheet" href="assets/fonts/style.css">
 
     <!-- Styles -->
     <link rel="stylesheet" href="style.css" />
@@ -20,22 +20,28 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+
+    <!--Swiper-->
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
+    />
   </head>
   <body>
     <header id="header">
       <nav class="container">
         <a class="logo" href="#">beauty<span>salon</span>.</a>
         <div class="menu">
-          <ul class="grid">
+          <ul class="grid">about
             <li><a class="title" href="#home">Início</a></li>
             <li><a class="title" href="#about">Sobre</a></li>
-            <li><a class="title" href="services">Serviços</a></li>
-            <li><a class="title" href="testimonials">Depoimentos</a></li>
-            <li><a class="title" href="contact">Contato</a></li>
+            <li><a class="title" href="#services">Serviços</a></li>
+            <li><a class="title" href="#testimonials">Depoimentos</a></li>
+            <li><a class="title" href="#contact">Contato</a></li>
           </ul>
         </div>
-        <div class="icon-menu"></div>
-        <div class="icon-close"></div>
+        <div class="toggle icon-menu"></div>
+        <div class="toggle icon-close"></div>
       </nav>
     </header>
 
@@ -63,16 +69,117 @@
 
       <section class="section" id="about">
         <div class="container grid">
-          Sobre
+          <div class="image">
+            <img src="https://images.unsplash.com/photo-1559599101-f09722fb4948?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8aGFpcmRyZXNzZXJ8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="">
+          </div>
+          <div class="text">
+            <h2 class="title">Sobre nós</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, sit fuga dolorum corporis pariatur cupiditate omnis, assumenda praesentium eius veniam distinctio magnam fugiat, odio numquam. Eveniet neque possimus omnis quas!</p>
+            <br>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ad eveniet, magnam iusto tenetur beatae saepe quos perspiciatis odio cupiditate, vitae expedita et quidem enim quia, praesentium in facere nulla.</p>
+            <br>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta voluptates qui tempora odit quas culpa ab nostrum porro hic, quibusdam a quam magnam saepe iste aperiam deleniti quaerat? Debitis, recusandae?</p>
+          </div>
         </div>
       </section>
 
+      <div class="divider-2"></div>
+
       <section class="section" id="services">
         <div class="container grid">
-          Services
+          <header>
+            <h2 class="title">Serviços</h2>
+            <p>Com mais de 10 anos no mercado, o <strong>Beautysalon</strong> já consquistou clientes de inúmero países com seus tratamentos exclusivos e totalmente naturais.</p>
+          </header>
+          <div class="cards">
+            <div class="card">
+              <i class="icon-woman-hair"></i>
+              <h3 class="title">Terapia capilar</h3>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis amet, laudantium quos, quo vero qui cupiditate</p>
+            </div>
+            <div class="card">
+              <i class="icon-trim"></i>
+              <h3 class="title">Cortes</h3>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis amet, laudantium quos, quo vero qui cupiditate</p>
+            </div>
+            <div class="card">
+              <i class="icon-cosmetic"></i>
+              <h3 class="title">Tratamentos</h3>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis amet, laudantium quos, quo vero qui cupiditate</p>
+            </div>
+          </div>
         </div>
       </section>
       </section>
+
+      <div class="divider-1"></div>
+      <!--TESTIMONIALS-->
+      <section class="section" id="testimonials">
+        <div class="container grid">
+          <header>
+            <h2 class="title">Depoimentos de quem já passou por aqui</h2>
+          </header>
+          <div class="testimonials swiper-container">
+
+            <div class="swiper-wrapper">
+
+              <div class="testimonial swiper_slide">
+                <blockquote>
+                  <p>
+                    <span>&ldquo;</span>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur deserunt quidem culpa quis id suscipit laudantium
+                  </p>
+                  <cite>
+                    <img src="https://randomuser.me/api/portraits/lego/1.jpg" alt="">
+                    Wanessa Souza
+                  </cite>
+                </blockquote>
+              </div>
+              
+              <div class="testimonial swiper_slide">
+                <blockquote>
+                  <p>
+                    <span>&ldquo;</span>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur deserunt quidem culpa quis id suscipit laudantium
+                  </p>
+                  <cite>
+                    <img src="https://randomuser.me/api/portraits/lego/0.jpg" alt="">
+                    Franciele Venega
+                  </cite>
+                </blockquote>
+              </div>
+  
+              <div class="testimonial swiper_slide">
+                <blockquote>
+                  <p>
+                    <span>&ldquo;</span>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur deserunt quidem culpa quis id suscipit laudantium
+                  </p>
+                  <cite>
+                    <img src="https://randomuser.me/api/portraits/lego/6.jpg" alt="">
+                    Valeska Fabris
+                  </cite>
+                </blockquote>
+              </div>
+
+            </div>
+
+            <div class="swiper-pagination"></div>
+
+          </div>
+        </div>
+      </section>
+
+
+      <!--CONTACT-->
+
+
     </main>
+
+    <!-- swiper -->
+    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+
+    <!-- main.js-->
+    <script src="main.js"></script>
   </body>
 </html>
